feat: finetuning capacities (e.g. avoid doubles and sorting)

--- a/src/main/webapp/capacities.xhtml
+++ b/src/main/webapp/capacities.xhtml
@@ -1,23 +1,22 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="container">
             <h2>Kapazitäten</h2>
-            <div class="container">
-                <div class="row">
-                    <ui:repeat var="o" value="#{capacities}">
-                        <div class="col-xs-12 col-sm-4 col-lg-2">
-                            #{o.formattedDate} - #{o.number}
-                            <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal"
+            <table class="table table-striped table-condensed">
+                <ui:repeat var="o" value="#{capacities}">
+                    <tr>
+                        <td>#{o.formattedDate}</td>
+                        <td>#{o.number}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
                                     data-target="#modalEdit">Bearbeiten
                             </button>
-                        </div>
-                    </ui:repeat>
-                </div>
-            </div>
+                        </td>
+                    </tr>
+                </ui:repeat>
+            </table>
 
             <!-- Modal Edit-->
             <div class="modal fade" id="modalEdit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -29,7 +28,7 @@
                             <h4 class="modal-title" id="myModalLabel">Kapazität bearbeiten</h4>
                         </div>
                         <div class="modal-body">
-asasas
+                            asasas
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
