--- a/src/main/webapp/capacities.xhtml
+++ b/src/main/webapp/capacities.xhtml
@@ -11,7 +11,7 @@
                         <td>#{o.number}</td>
                         <td>
                             <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
-                                    data-target="#modalEdit">Bearbeiten
+                                    data-target="#modalEdit"><i class="fa fa-pencil-square-o"></i>
                             </button>
                         </td>
                     </tr>
