--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,7 +4,11 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 template="/templates/main.xhtml">
     <ui:define name="content">
-        <div class="container">
+
+        <a href="#warnings" class="btn"><button type="button" class="btn btn-info">Warnungen</button></a>
+        <a href="#hiwis" class="btn"><button type="button" class="btn btn-info">Hiwis</button></a>
+
+        <div class="container" id="warnings">
             <h2>Warnungen</h2>
             <table class="table table-striped table-condensed">
                 <tr>
@@ -21,9 +25,6 @@
                         <td>#{o.typ}</td>
                         <td>#{o.count}/#{o.capacity}</td>
                         <td>
-                          <!--  <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
-                                    data-target="#modalEdit"><i class="fa fa-pencil-square-o"></i>
-                            </button>-->
                             <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
                                     data-target="#modalEdit"><i class="fa fa-trash"></i>
                             </button>
@@ -31,7 +32,9 @@
                     </tr>
                 </ui:repeat>
             </table>
-            <hr/>
+        </div>
+        <hr/>
+        <div class="container" id="hiwis">
             <h2>Hiwis</h2>
             <div class="container">
                 <div class="row">
