--- a/src/main/webapp/hiwi.xhtml
+++ b/src/main/webapp/hiwi.xhtml
@@ -3,42 +3,35 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <h2>Hiwi: #{hiwiDetailBean.name}</h2>
-        <a href="#bookings" class="btn">
-            <button type="button" class="btn btn-info">Buchungen</button>
-        </a>
-        <a href="#auswertung" class="btn">
-            <button type="button" class="btn btn-info">Auswertung</button>
-        </a>
 
-        <div class="container" id="bookings">
-            <h2>Einzelbuchungen</h2>
-            <table class="table table-striped table-condensed">
-                <tr>
-                    <th>Datum</th>
-                    <th>Zeitraum</th>
-                    <th>Netto in Min</th>
-                    <th>Brutto in Min</th>
-                    <th>Aktionen</th>
-                </tr>
-                <ui:repeat var="o" value="#{hiwiDetailBean.bookings}">
-                    <tr>
-                        <td>#{o.date}</td>
-                        <td>#{o.start} - #{o.ende}</td>
-                        <td>#{o.nettoDuration}</td>
-                        <td>#{o.bruttoDuration}</td>
-                        <td>
-                            <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
-                                    data-target="#modalEdit"><i class="fa fa-pencil-square-o"></i>
-                            </button>
-                        </td>
-                    </tr>
-                </ui:repeat>
-            </table>
-        </div>
-        <hr/>
-        <div class="container" id="auswertung">
-            <h2>Auswertungen</h2>
-            Was packen wir hier hin?
+        <div class="panel with-nav-tabs panel-default">
+            <div class="panel-heading">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#tab1default" data-toggle="tab">Einzelbuchungen</a></li>
+                </ul>
+            </div>
+            <div class="panel-body">
+                <div class="tab-content">
+                    <div class="tab-pane fade in active" id="tab1default">
+                        <table class="table table-striped table-condensed">
+                            <tr>
+                                <th>Datum</th>
+                                <th>Zeitraum</th>
+                                <th>Netto in Min</th>
+                                <th>Brutto in Min</th>
+                            </tr>
+                            <ui:repeat var="o" value="#{hiwiDetailBean.bookings}">
+                                <tr>
+                                    <td>#{o.date}</td>
+                                    <td>#{o.start} - #{o.ende}</td>
+                                    <td>#{o.nettoDuration}</td>
+                                    <td>#{o.bruttoDuration}</td>
+                                </tr>
+                            </ui:repeat>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </ui:define>
 </ui:composition>
