--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,47 +5,55 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
 
-        <a href="#warnings" class="btn"><button type="button" class="btn btn-info">Warnungen</button></a>
-        <a href="#hiwis" class="btn"><button type="button" class="btn btn-info">Hiwis</button></a>
+        <div class="panel with-nav-tabs panel-default">
+            <div class="panel-heading">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#tab1default" data-toggle="tab">Warnungen</a></li>
+                    <li><a href="#tab2default" data-toggle="tab">Hiwis</a></li>
+                </ul>
+            </div>
+            <div class="panel-body">
+                <div class="tab-content">
+                    <div class="tab-pane fade in active" id="tab1default">
+                        <table class="table table-striped table-condensed">
+                            <tr>
+                                <th>Von</th>
+                                <th>Bis</th>
+                                <th>Typ</th>
+                                <th>Aktuelle/Kapazität</th>
+                                <th>Aktionen</th>
+                            </tr>
+                            <ui:repeat var="o" value="#{warnings}">
+                                <tr>
+                                    <td>#{o.date}</td>
+                                    <td>#{o.start} - #{o.ende}</td>
+                                    <td>#{o.typ}</td>
+                                    <td>#{o.count}/#{o.capacity}</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+                                                data-target="#modalEdit"><i class="fa fa-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </ui:repeat>
+                        </table>
+                    </div>
 
-        <div class="container" id="warnings">
-            <h2>Warnungen</h2>
-            <table class="table table-striped table-condensed">
-                <tr>
-                    <th>Von</th>
-                    <th>Bis</th>
-                    <th>Typ</th>
-                    <th>Aktuelle/Kapazität</th>
-                    <th>Aktionen</th>
-                </tr>
-                <ui:repeat var="o" value="#{warnings}">
-                    <tr>
-                        <td>#{o.date}</td>
-                        <td>#{o.start} - #{o.ende}</td>
-                        <td>#{o.typ}</td>
-                        <td>#{o.count}/#{o.capacity}</td>
-                        <td>
-                            <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
-                                    data-target="#modalEdit"><i class="fa fa-trash"></i>
-                            </button>
-                        </td>
-                    </tr>
-                </ui:repeat>
-            </table>
-        </div>
-        <hr/>
-        <div class="container" id="hiwis">
-            <h2>Hiwis</h2>
-            <div class="container">
-                <div class="row">
-                    <ui:repeat var="o" value="#{hiwis}">
-                        <div class="col-xs-12 col-sm-4 col-lg-2">
-                            <h:link outcome="hiwi">
-                                <f:param name="name" value="#{o.name}"/>
-                                #{o.name}
-                            </h:link>
+                    <!-- HIWI TAB -->
+                    <div class="tab-pane fade" id="tab2default">
+                        <div class="container">
+                            <div class="row">
+                                <ui:repeat var="o" value="#{hiwis}">
+                                    <div class="col-xs-12 col-sm-4 col-lg-2">
+                                        <h:link outcome="hiwi">
+                                            <f:param name="name" value="#{o.name}"/>
+                                            #{o.name}
+                                        </h:link>
+                                    </div>
+                                </ui:repeat>
+                            </div>
                         </div>
-                    </ui:repeat>
+                    </div>
                 </div>
             </div>
         </div>
