--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -41,18 +41,26 @@
 
                     <!-- HIWI TAB -->
                     <div class="tab-pane fade" id="tab2default">
-                        <div class="container">
-                            <div class="row">
-                                <ui:repeat var="o" value="#{hiwis}">
-                                    <div class="col-xs-12 col-sm-4 col-lg-2">
+                        <table class="table table-striped table-condensed">
+                            <tr>
+                                <th>Name</th>
+                                <th>Gesamtstunden</th>
+                                <th>Monatsstunden</th>
+                                <!-- TODO ImportResult -->
+                            </tr>
+                            <ui:repeat var="o" value="#{hiwis}">
+                                <tr>
+                                    <td>
                                         <h:link outcome="hiwi">
                                             <f:param name="name" value="#{o.name}"/>
                                             #{o.name}
                                         </h:link>
-                                    </div>
-                                </ui:repeat>
-                            </div>
-                        </div>
+                                    </td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </ui:repeat>
+                        </table>
                     </div>
                 </div>
             </div>
