feat: adds overall and monthly netto sums

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -56,8 +56,8 @@
                                             #{o.name}
                                         </h:link>
                                     </td>
-                                    <td></td>
-                                    <td></td>
+                                    <td>#{o.overallNetto}</td>
+                                    <td>#{o.monthlyNetto}</td>
                                 </tr>
                             </ui:repeat>
                         </table>
