--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -45,8 +45,8 @@
                         <table class="table table-striped table-condensed">
                             <tr>
                                 <th>Name</th>
-                                <th>Gesamtstunden</th>
-                                <th>Monatsstunden</th>
+                                <th>Gesamt in Minuten</th>
+                                <th>Minuten pro Monat</th>
                                 <!-- TODO ImportResult -->
                             </tr>
                             <ui:repeat var="o" value="#{hiwis}">
