refac: small stuff and changelog

--- a/src/main/webapp/config.xhtml
+++ b/src/main/webapp/config.xhtml
@@ -7,7 +7,7 @@
         <div class="container">
             <h2>Ignorierte Buchungskenner</h2>
             <h:form>
-                <h:inputText value="#{skipValueListBean.newSkipValue}" pt:placeholder="fill me"/>
+                <h:inputText value="#{skipValueListBean.newSkipValue}" pt:placeholder="neuer SkipValue"/>
                 <h:commandButton styleClass="btn btn-primary" value="Hinzufügen" type="submit"
                                  action="#{skipValueListBean.add}"/>
             </h:form>
