--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -3,6 +3,17 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="panel panel-default">
+            <div class="panel-heading">Version: 20170131_0016</div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">Kapazitätsimport: Import nun immer letztes Arbeitsblatt</li>
+                    <li class="list-group-item">Config: SkipValues nun editierbar</li>
+                    <li class="list-group-item">Importer: Einstellung und Verwendung von Pausenberechnungsauswahl</li>
+                    <li class="list-group-item">Umstellung Hiwi-Auswertung auf Stunden</li>
+                </ul>
+            </div>
+        </div>
+        <div class="panel panel-default">
             <div class="panel-heading">Version: 20170129_2250</div>
             <div class="panel-body">
                 <ul class="list-group">
