feat: extend of changelog

--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -3,6 +3,19 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="panel panel-default">
+            <div class="panel-heading">Version: 20170202_2215</div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">Integration Kalendar inkl. Warnungen</li>
+                    <li class="list-group-item">Kapazitätsimport: BugFix für CSV robuster gemacht (Leerzeichen und Leerzeilen nun möglich)</li>
+                    <li class="list-group-item">Kapazitätsimport: BugFix für XLSX (Anpassung Spalten)</li>
+                    <li class="list-group-item">Monaten nun geordnet und in Deutsch</li>
+                    <li class="list-group-item">Hiwi-Tab: Tabellenüberschrift von Minuten auf Stunden angepasst</li>
+                    <li class="list-group-item">Kapazitätsimport: Anzeige von Importergebnis</li>
+                </ul>
+            </div>
+        </div>
+        <div class="panel panel-default">
             <div class="panel-heading">Version: 20170131_0016</div>
             <div class="panel-body">
                 <ul class="list-group">
