bug: change minutes to hours for hiwi hours

--- a/src/main/webapp/hiwi.xhtml
+++ b/src/main/webapp/hiwi.xhtml
@@ -17,8 +17,8 @@
                             <tr>
                                 <th>Datum</th>
                                 <th>Zeitraum</th>
-                                <th>Netto in Min</th>
-                                <th>Brutto in Min</th>
+                                <th>Netto in Stunden</th>
+                                <th>Brutto in Stunden</th>
                             </tr>
                             <ui:repeat var="o" value="#{hiwiDetailBean.bookings}">
                                 <tr>
