--- a/src/main/webapp/calendar.xhtml
+++ b/src/main/webapp/calendar.xhtml
@@ -5,7 +5,7 @@
         <div class="container">
             <h2>Calendar</h2>
         </div>
-        <div id='calendar'></div>
+        <div id="calendar"></div>
         <script src="/resources/js/jquery.min.js"></script>
         <script src="/resources/js/moment.min.js"></script>
         <script src="/resources/js/fullcalendar.min.js"></script>
@@ -24,6 +24,7 @@
 			allDaySlot: true,
 			allDayText: '',
 			eventTextColor: 'black',
+			eventColor: '#99CCFF',
 			minTime: "08:00:00",
 			maxTime: "17:00:00",
 			weekends: false,
