--- a/src/main/webapp/calendar.xhtml
+++ b/src/main/webapp/calendar.xhtml
@@ -29,6 +29,7 @@
 			eventColor: '#99CCFF',
 			minTime: "08:00:00",
 			maxTime: "17:00:00",
+			displayEventEnd: true,
 			weekends: false,
 			axisFormat: 'HH:mm',
 			slotLabelFormat: 'HH:mm',
