--- a/src/main/webapp/hiwi.xhtml
+++ b/src/main/webapp/hiwi.xhtml
@@ -3,7 +3,7 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <h2>Hiwi: #{hiwiDetailBean.name}</h2>
-        <p><a href=""><i class="fa fa-file-excel-o" aria-hidden="true"/>Export</a></p>
+        <p><a href="/api/print/#{hiwiDetailBean.name}"><i class="fa fa-file-excel-o" aria-hidden="true"/>Export</a></p>
 
         <div class="row">
             <div class="col-md-6">
