bug: scaling on hiwi.xhtml

--- a/src/main/webapp/hiwi.xhtml
+++ b/src/main/webapp/hiwi.xhtml
@@ -122,7 +122,17 @@
                         data: [#{hiwiDetailBean.bookingValuesBrutto}]
                       }
 				  ]
-				}
+				},
+				options: {
+                    scales: {
+                        xAxes: [{
+                            stacked: true
+                        }],
+                        yAxes: [{
+                            stacked: true
+                        }]
+                    }
+                }
 			  });
 			}
 
