--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -42,6 +42,7 @@
 
                     <!-- HIWI TAB -->
                     <div class="tab-pane fade" id="tab2default">
+                        <p><a href="/api/print/hiwis"><i class="fa fa-file-excel-o" aria-hidden="true"/> Gesamtübersicht</a></p>
                         <table class="table table-striped table-condensed">
                             <tr>
                                 <th>Name</th>
