typo: Kalenadar -> Kalender

--- a/src/main/webapp/calendar.xhtml
+++ b/src/main/webapp/calendar.xhtml
@@ -3,7 +3,7 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="container">
-            <h2>Kalendar</h2>
+            <h2>Kalender</h2>
         </div>
         <div id="calendar"></div>
         <script src="/resources/js/jquery.min.js"></script>
