--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -6,7 +6,7 @@
             <div class="panel-heading">Version: 20170202_2215</div>
             <div class="panel-body">
                 <ul class="list-group">
-                    <li class="list-group-item">Integration Kalendar inkl. Warnungen</li>
+                    <li class="list-group-item">Integration Kalender inkl. Warnungen</li>
                     <li class="list-group-item">Kapazitätsimport: BugFix für CSV robuster gemacht (Leerzeichen und Leerzeilen nun möglich)</li>
                     <li class="list-group-item">Kapazitätsimport: BugFix für XLSX (Anpassung Spalten)</li>
                     <li class="list-group-item">Monaten nun geordnet und in Deutsch</li>
