chore: update changelog

--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -3,6 +3,16 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="panel panel-default">
+            <div class="panel-heading">Version: 20170313_2255</div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">Warnungen aus Kalendar löschbar</li>
+                    <li class="list-group-item">Typo: Kalendar -> Kalender</li>
+                    <li class="list-group-item">Export: Hiwi-Gesamtübersicht</li>
+                </ul>
+            </div>
+        </div>
+        <div class="panel panel-default">
             <div class="panel-heading">Version: 20170202_2215</div>
             <div class="panel-body">
                 <ul class="list-group">
