feat: Exporte für Kapazitäten und Warnungen hinzugefügt

--- a/src/main/webapp/capacities.xhtml
+++ b/src/main/webapp/capacities.xhtml
@@ -5,6 +5,11 @@
         <div class="container">
             <h2>Kapazitäten</h2>
             <table class="table table-striped table-condensed">
+                <tr>
+                    <th>Datum</th>
+                    <th>Anzahl</th>
+                    <th/>
+                </tr>
                 <ui:repeat var="o" value="#{capacities}">
                     <tr>
                         <td>#{o.formattedDate}</td>
