chore: update of changelog

--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -3,6 +3,19 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="panel panel-default">
+            <div class="panel-heading">Version: 20170315_1655</div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">Fehlerbehebung: Aus dem Kalender gelöschte Warnungen werden aus Übersichtstabelle nicht gelöscht</li>
+                    <li class="list-group-item">Umstellung: Gesamtübersicht-Export auf Monat/ pro Spalte umgestellt</li>
+                    <li class="list-group-item">Umstellung: Kräftige Farben für Balkendiagramme</li>
+                    <li class="list-group-item">Fehlerbehebung: Brutto-Balken in Einzel-Hiwi-Ansicht werden nicht angezeigt</li>
+                    <li class="list-group-item">Umstellung: Warnungen werden nur noch für die Kernzeiten (Mo-Do: 9-16, Fr: 9-12) erzeugt</li>
+                    <li class="list-group-item">Erweiterung: Exporte für Warnungen und Kapazitäten</li>
+                </ul>
+            </div>
+        </div>
+        <div class="panel panel-default">
             <div class="panel-heading">Version: 20170313_2255</div>
             <div class="panel-body">
                 <ul class="list-group">
