feat: display change of week to range

--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -3,7 +3,7 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="panel panel-default">
-            <div class="panel-heading">Version: 20170315_1655</div>
+            <div class="panel-heading">Version: 20170315_2300</div>
             <div class="panel-body">
                 <ul class="list-group">
                     <li class="list-group-item">Fehlerbehebung: Aus dem Kalender gelöschte Warnungen werden aus Übersichtstabelle nicht gelöscht</li>
@@ -12,6 +12,8 @@
                     <li class="list-group-item">Fehlerbehebung: Brutto-Balken in Einzel-Hiwi-Ansicht werden nicht angezeigt</li>
                     <li class="list-group-item">Umstellung: Warnungen werden nur noch für die Kernzeiten (Mo-Do: 9-16, Fr: 9-12) erzeugt</li>
                     <li class="list-group-item">Erweiterung: Exporte für Warnungen und Kapazitäten</li>
+                    <li class="list-group-item">Erweiterung: Warnungen aktualisieren, wenn eine Kapazitätsdatei importiert wird</li>
+                    <li class="list-group-item">Umstellung: Hiwi-Wocheübersicht nun mit Zeitbereich (z.B. 10.4-14.4)</li>
                 </ul>
             </div>
         </div>
