bug: Fehler: Serientermine mit Startzeit-Abweichungen werden fehlerhaft importiert

--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -3,6 +3,14 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="panel panel-default">
+            <div class="panel-heading">Version: 20170411_2120</div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">Fehler: Serientermine mit Startzeit-Abweichungen werden fehlerhaft importiert</li>
+                </ul>
+            </div>
+        </div>
+        <div class="panel panel-default">
             <div class="panel-heading">Version: 20170315_2300</div>
             <div class="panel-body">
                 <ul class="list-group">
