--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -3,6 +3,15 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="panel panel-default">
+            <div class="panel-heading">Version: 20170822_2310</div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">Fehler: SkipValues berücksichtigte Groß-/Kleinschreibung nicht richtig</li>
+                    <li class="list-group-item">Erweiterung: Kapazitäten können nun auch gelöscht werden</li>
+                </ul>
+            </div>
+        </div>
+        <div class="panel panel-default">
             <div class="panel-heading">Version: 20170411_2120</div>
             <div class="panel-body">
                 <ul class="list-group">
