--- a/src/main/webapp/config.xhtml
+++ b/src/main/webapp/config.xhtml
@@ -21,7 +21,7 @@
                         <tr>
                             <td>#{o.skipValue}</td>
                             <td>
-                                <h:commandButton styleClass="btn btn-primary" type="submit" value="Delete"
+                                <h:commandButton styleClass="btn btn-primary" type="submit" value="Löschen"
                                                  action="#{skipValueListBean.delete(o)}"/>
                             </td>
                         </tr>
