--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -31,7 +31,7 @@
                                         <td>#{o.typ}</td>
                                         <td>#{o.count}/#{o.capacity}</td>
                                         <td>
-                                            <h:commandButton styleClass="btn btn-primary" type="submit" value="Delete"
+                                            <h:commandButton styleClass="btn btn-primary" type="submit" value="Löschen"
                                                              action="#{warningListBean.delete(o)}"/>
                                         </td>
                                     </tr>
