--- a/src/main/webapp/capacities.xhtml
+++ b/src/main/webapp/capacities.xhtml
@@ -1,46 +1,29 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:h="http://java.sun.com/jsf/html"
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="container">
             <h2>Kapazitäten</h2>
-            <table class="table table-striped table-condensed">
-                <tr>
-                    <th>Datum</th>
-                    <th>Anzahl</th>
-                    <th/>
-                </tr>
-                <ui:repeat var="o" value="#{capacities}">
+            <h:form>
+                <table class="table table-striped table-condensed">
                     <tr>
-                        <td>#{o.formattedDate}</td>
-                        <td>#{o.number}</td>
-                        <td>
-                            <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
-                                    data-target="#modalEdit"><i class="fa fa-pencil-square-o"></i>
-                            </button>
-                        </td>
+                        <th>Datum</th>
+                        <th>Anzahl</th>
+                        <th/>
                     </tr>
-                </ui:repeat>
-            </table>
-
-            <!-- Modal Edit-->
-            <div class="modal fade" id="modalEdit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                    aria-hidden="true">x</span></button>
-                            <h4 class="modal-title" id="myModalLabel">Kapazität bearbeiten</h4>
-                        </div>
-                        <div class="modal-body">
-                            asasas
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                    <ui:repeat var="o" value="#{capacityListBean.capacities}">
+                        <tr>
+                            <td>#{o.formattedDate}</td>
+                            <td>#{o.number}</td>
+                            <td>
+                                <h:commandButton styleClass="btn btn-primary" type="submit" value="Löschen"
+                                                 action="#{capacityListBean.delete(o)}"/>
+                            </td>
+                        </tr>
+                    </ui:repeat>
+                </table>
+            </h:form>
         </div>
     </ui:define>
 </ui:composition>
