--- a/src/main/webapp/hiwi.xhtml
+++ b/src/main/webapp/hiwi.xhtml
@@ -3,7 +3,10 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <h2>Hiwi: #{hiwiDetailBean.name}</h2>
-        <p><a href="/api/print/#{hiwiDetailBean.name}"><i class="fa fa-file-excel-o" aria-hidden="true"/> Export</a></p>
+        <p>
+            <a href="hiwis.xhtml"><i class="fa fa-file-excel-o" aria-hidden="true"/> Zurück</a>
+            <a href="/api/print/#{hiwiDetailBean.name}"><i class="fa fa-file-excel-o" aria-hidden="true"/> Export</a>
+        </p>
 
         <div class="row">
             <div class="col-md-6">
@@ -134,6 +137,7 @@
                 }
 			  });
 			}
+
         </script>
     </ui:define>
 </ui:composition>
