--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,68 +1,35 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
                 template="/templates/main.xhtml">
     <ui:define name="content">
-
-        <div class="panel with-nav-tabs panel-default">
-            <div class="panel-heading">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a href="#tab1default" data-toggle="tab">Warnungen</a></li>
-                    <li><a href="#tab2default" data-toggle="tab">Hiwis</a></li>
-                </ul>
-            </div>
-            <div class="panel-body">
-                <div class="tab-content">
-                    <div class="tab-pane fade in active" id="tab1default">
-                        <table class="table table-striped table-condensed">
-                            <tr>
-                                <th>Von</th>
-                                <th>Bis</th>
-                                <th>Typ</th>
-                                <th>Aktuelle/Kapazität</th>
-                                <th>Aktionen</th>
-                            </tr>
-                            <h:form>
-                                <ui:repeat var="o" value="#{warningListBean.warnings}">
-                                    <tr>
-                                        <td>#{o.date}</td>
-                                        <td>#{o.start} - #{o.ende}</td>
-                                        <td>#{o.typ}</td>
-                                        <td>#{o.count}/#{o.capacity}</td>
-                                        <td>
-                                            <h:commandButton styleClass="btn btn-primary" type="submit" value="Löschen"
-                                                             action="#{warningListBean.delete(o)}"/>
-                                        </td>
-                                    </tr>
-                                </ui:repeat>
-                            </h:form>
-                        </table>
-                    </div>
-
-                    <!-- HIWI TAB -->
-                    <div class="tab-pane fade" id="tab2default">
-                        <table class="table table-striped table-condensed">
-                            <tr>
-                                <th>Name</th>
-                                <th>Gesamt in Stunden</th>
-                                <th>Stunden pro Monat</th>
-                                <!-- TODO ImportResult -->
-                            </tr>
-                            <ui:repeat var="o" value="#{hiwis}">
+        <div class="container">
+            <h2>Hiwis</h2>
+            <div class="panel with-nav-tabs panel-default">
+                <div class="tab-pane fade in active" id="tab1default">
+                    <table class="table table-striped table-condensed">
+                        <tr>
+                            <th>Von</th>
+                            <th>Bis</th>
+                            <th>Typ</th>
+                            <th>Aktuelle/Kapazität</th>
+                            <th>Aktionen</th>
+                        </tr>
+                        <h:form>
+                            <ui:repeat var="o" value="#{warningListBean.warnings}">
                                 <tr>
+                                    <td>#{o.date}</td>
+                                    <td>#{o.start} - #{o.ende}</td>
+                                    <td>#{o.typ}</td>
+                                    <td>#{o.count}/#{o.capacity}</td>
                                     <td>
-                                        <h:link outcome="hiwi">
-                                            <f:param name="name" value="#{o.name}"/>
-                                            #{o.name}
-                                        </h:link>
+                                        <h:commandButton styleClass="btn btn-primary" type="submit" value="Löschen"
+                                                         action="#{warningListBean.delete(o)}"/>
                                     </td>
-                                    <td>#{o.overallNetto}</td>
-                                    <td>#{o.monthlyNettoAsString}</td>
                                 </tr>
                             </ui:repeat>
-                        </table>
-                    </div>
+                        </h:form>
+                    </table>
                 </div>
             </div>
         </div>
