chore: Updates changelog

--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -3,6 +3,15 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="panel panel-default">
+            <div class="panel-heading">Version: 20170921_2221</div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">Fehler: Import von Kapazitäten-Xlsx funktioniert nicht, wenn Datumsspalte kein Jahr hat</li>
+                    <li class="list-group-item">Erweiterung: Aufspaltung Home in Warnungen und Hiwis (für Zurück-Button)</li>
+                </ul>
+            </div>
+        </div>
+        <div class="panel panel-default">
             <div class="panel-heading">Version: 20170822_2310</div>
             <div class="panel-body">
                 <ul class="list-group">
