chore: updates changelog

--- a/src/main/webapp/changelog.xhtml
+++ b/src/main/webapp/changelog.xhtml
@@ -3,6 +3,14 @@
                 template="/templates/main.xhtml">
     <ui:define name="content">
         <div class="panel panel-default">
+            <div class="panel-heading">Version: 20171004_0753</div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">Fehler: SkipValues werden mehrfach angelegt (und Dialog erscheint)</li>
+                </ul>
+            </div>
+        </div>
+        <div class="panel panel-default">
             <div class="panel-heading">Version: 20170921_2221</div>
             <div class="panel-body">
                 <ul class="list-group">
